# gshare

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  clean-media.sh  docker-compose.yaml  entrypoint.sh  pyproject.toml
config/: celery.py  settings.py  urls.py
entrypoints/: backend.sh  celery.sh
media/logs/: .gitignore
nginx/: nginx.conf
src/administrator/: apps.py
src/administrator/migrations/: 0001_initial.py
src/common/: apps.py  utils.py  views.py
src/common/migrations/: 0001_initial.py
src/common/templates/common/: base.html  video_list.html
src/filemanager/: apps.py
src/files/: api.py  apps.py  models.py
src/files/migrations/: 0001_initial.py  0002_remove_job_uploaded_by.py
src/files/templates/files/: uploader.html
src/video_processor/: admin.py  api.py  apps.py  models.py  signals.py  tasks.py  views.py
src/video_processor/dto/: subtitles_dtos.py
src/video_processor/migrations/: 0001_initial.py  0002_alter_video_log_file_alter_video_srt_file.py  0003_alter_video_status.py  0004_remove_video_srt_file.py
src/video_processor/services/: subtitle_processor.py
src/video_processor/services/extractors/: extractor_base..py  extractor_base.py  ffmpeg_extractor.py
src/video_processor/services/parsers/: srt_parser.py
src/video_processor/templates/video_processor/: video_list.html
src/video_processor/tests/extractors/: test_ffmpeg_extractor.py
src/video_processor/tests/parsers/: test_srt_parser.py
