[tool.poetry]
name = "gshare"
version = "0.1.0"
description = "A Backend for extracting subtitles from uploaded videos"
authors = ["Gagandeep Singh Bhambrah <grimmgagan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
