[tool.poetry]
name = "gshare"
version = "0.1.0"
description = "A Backend for extracting subtitles from uploaded videos"
authors = ["Gagandeep Singh Bhambrah <grimmgagan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
psycopg2-binary = "^2.9.9"
pyright = "^1.1.379"
djangorestframework = "^3.15.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
